# file-server

./: .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
appdata/: file-list-base.html  page-not-found.txt
assets/: config.toml  file-list-base.html
src/: api.rs  app_fs.rs  config.rs  filesystem.rs  fs_tools.rs  lib.rs  main.rs
src/app_fs/: config.rs  filesystem.rs
