[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
env_logger = "0.11"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
walkdir = "2.5.0"
percent-encoding = "2.3.1"
log = "0.4.22"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
lto = "thin"
incremental = true
codegen-units = 20

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
incremental = true
codegen-units = 1
